--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 EXPO_PUBLIC_APPWRITE_PROJECT_ID=69140c530004e940e208
 EXPO_PUBLIC_APPWRITE_PROJECT_NAME="Dorium_Estate"
 EXPO_PUBLIC_APPWRITE_ENDPOINT=https://sgp.cloud.appwrite.io/v1
+EXPO_PUBLIC_APPWRITE_DATABASE_ID=691dd54200038e6c69fe
+EXPO_PUBLIC_APPWRITE_AGENTS_ID=agents
+EXPO_PUBLIC_APPWRITE_AGENTS_GALLERY=gallery
